try static layout

--- a/css/index.css
+++ b/css/index.css
@@ -23,3 +23,13 @@ text {
     stroke: #fff;
     stroke-width: 1.5px;
 }
+
+.aaaa{
+    color: #14c3ff;
+    areaColor: #323c48;
+    borderColor: #404a59;
+    areaColor: #2a333d;
+    color: #272B2F;
+    color: #B2BBC1;
+    color: #f4e925;
+}
