--- a/css/index.css
+++ b/css/index.css
@@ -35,16 +35,26 @@ text {
     color: #f4e925;
 }
 
-circle{
-    cursor: hand;
+.entity-tuple {
+    cursor: pointer;
 }
 
 text.entity-name{
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently */
     font-size: 1.5em;
     text-anchor: middle;
-    cursor: default;
+    cursor: pointer;
 }
 text.entity-attr-name{
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently */
     font-size: 0.75em;
     text-anchor: middle;
 }
