--- a/css/index.css
+++ b/css/index.css
@@ -39,6 +39,10 @@ text {
     cursor: pointer;
 }
 
+.entity-attr-tuple{
+    cursor: pointer;
+}
+
 text.entity-name{
     -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Chrome/Safari/Opera */
